fix hover grids on mobile
iOS bug needed the <a> to be display block

--- a/css/responsive/mobile.styl
+++ b/css/responsive/mobile.styl
@@ -285,6 +285,8 @@ img
   height: initial
   margin: 0 auto $margin-basic auto
   text-align: center
+  a
+    display: block
 
 .hover-grid-item-small
   height: initial
